--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
-    "mongoose-unique-validator": "^5.0.1"
+    "mongoose-unique-validator": "^5.0.1",
+    "nodemailer": "^6.9.15"
   }
 }
