vercel folder done

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,39 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/auth/(.*)",
-        "dest": "index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "index.js"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/auth/login",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/auth/register",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/auth/logout",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/auth/user/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/auth/forgot-password",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/auth/reset-password/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/auth/contact",
+      "dest": "/index.js"
+    }
+  ]
+}
