--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run server"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
